# litestatic

./: .gitignore  .gitmodules  README.md  config.yaml  config_template.yaml  generate.py  litestatic  litestatic.py  pyproject.toml  requirements.txt
site/files/: style.css
src/litestatic/: __init__.py  __main__.py  config_template.yaml  litestatic.py
